--- a/.github/workflows/run_specific_test.yml
+++ b/.github/workflows/run_specific_test.yml
@@ -1,9 +1,7 @@
 name: Run Specific Test
 
 on:
-  pull_request:
-    branches:
-      - argparse_choices
+  workflow_dispatch:
 
 jobs:
   run-test:
